# hermes-lyra

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  build.rs  install.sh  mcp.json
assets/skill/: SKILL.md
docs/: CHANGELOG.md  specification.md
examples/: README.md  UPSTREAM.md
examples/code-review-evolve/: LINEAGE.md  SKILL.md  tripwire.sh  v0.1.0.lyra.json  v0.1.1.lyra.json  v0.2.0-bad.lyra.json
examples/codebase-inspection/: SKILL.md
examples/github-auth/: SKILL.md
examples/github-code-review/: SKILL.md
examples/github-issues/: SKILL.md
examples/github-pr-workflow/: SKILL.md
examples/github-repo-management/: SKILL.md
examples/inbox-triage/: SKILL.md
examples/news-brief/: SKILL.md
src/: banner.rs  bridge.rs  cid.rs  cli_api.rs  computations.rs  demo.rs  descriptor.rs  fuse.rs  gate.rs  install.rs  jsonld.rs  lib.rs  linter.rs  mcp.rs  proof_strategy.rs  receipt.rs  refinement.rs  schema.rs  shape.rs  skill_install.rs  tripwire.rs  version.rs  wire.rs
tests/: cid_format.rs  gate.rs  hermes_examples.rs  jsonld_schema_org.rs  lineage.rs  lint.rs  mcp_smoke.rs  roundtrip.rs  schema_anchor.rs  strict_parse.rs  substrate.rs  uor_anchor.rs
